--- a/src/ProjectManager/Bundle/PeopleBundle/Resources/views/Person/index.html.twig
+++ b/src/ProjectManager/Bundle/PeopleBundle/Resources/views/Person/index.html.twig
@@ -4,7 +4,8 @@
 	Id | First Name | Last Name | <br />
 	{% for person in persons %}
 	    {{ person.id }} | {{ person.firstName }} | {{ person.lastName }} | 
-	    update | <a href=" {{ path('project_manager_people_delete_person', { 'id' : person.id }) }}"> delete</a><br />
+	    <a href="{{ path('project_manager_people_update_person', { 'id' : person.id }) }}">update</a> 
+	    | <a href="{{ path('project_manager_people_delete_person', { 'id' : person.id }) }}"> delete</a><br />
 	{% endfor %}
 	<a href=" {{ path('project_manager_people_new_person') }}">Create a new person</a>
 
