--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
@@ -13,7 +13,7 @@
         </thead>
         <tbody>
         {% for entity in entities %}
-            <tr>
+            <tr name="team_{{ entity.id }}">
                 <td><a href="{{ path('team_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>
@@ -34,7 +34,7 @@
         <ul>
         <li>
             <a href="{{ path('team_new') }}">
-                Create a new entry
+                Create a new team
             </a>
         </li>
     </ul>
