--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Project Manager{% endblock %}</title>
         {% stylesheets '%kernel.root_dir%/Resources/public/css/*' output="css/compiled/bootstrap.css" filter="cssrewrite" %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
