--- a/app/Resources/TwigBundle/views/Exception/error.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error.html.twig
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Une erreur est survenue : {{ status_text }}</title>
-</head>
-<body>
-    <h1>Oups! Une erreur est survenue</h1>
+{% extends '::base.html.twig' %}
+
+{% block title %}{{ parent() }} - Une erreur est survenue : {{ status_text }}{% endblock %}
+
+{% block body %}
+	<h1>Oups! Une erreur est survenue</h1>
     <h2>Le serveur a retourné une erreur "{{ status_code }} {{ status_text }}".</h2>
-</body>
-</html>
+{% endblock %}
