--- a/app/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Page not found</title>
-</head>
-<body>
-    <h1>The page does not exist</h1>
-</body>
-</html>
+{% extends '::base.html.twig' %}
+
+{% block title %}{{ parent() }} - Page not found{% endblock %}
+
+{% block body %}
+	<h1>The page does not exist</h1>
+{% endblock %}
