--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -1,5 +1,15 @@
-<nav>
-<a href="{{ path ('pm_schedule_homepage') }}">Home</a>
-<a href="{{ path ('pm_user_list_person') }}">User Management</a>
-<a href="{{ path ('team') }}">Team Management</a>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	<div class="navbar-header">
+		<a class="navbar-brand" href="{{ path ('pm_schedule_homepage') }}">Project Manager</a>
+	</div>
+	<div class="navbar-collapse collapse">
+		<ul class="nav navbar-nav">
+			<li>
+				<a href="{{ path ('pm_user_list_person') }}">User Management</a>
+			</li>
+			<li>
+				<a href="{{ path ('team') }}">Team Management</a>
+			</li>
+		</ul>
+	</div>
 </nav>
