--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
@@ -1,6 +1,8 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
+	<h1>User list</h1>
+
 	Id | First Name | Last Name | <br />
 	{% for person in persons %}
 	    {{ person.id }} | {{ person.firstName }} | {{ person.lastName }} | 
