Enhance UI, Update Behat

--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -5,10 +5,10 @@
 	<div class="navbar-collapse collapse">
 		<ul class="nav navbar-nav">
 			<li>
-				<a href="{{ path ('pm_user_list_person') }}">User Management</a>
+				<a href="{{ path ('pm_user_user_list') }}">User Management</a>
 			</li>
 			<li>
-				<a href="{{ path ('team') }}">Team Management</a>
+				<a href="{{ path ('pm_user_team_list') }}">Team Management</a>
 			</li>
 		</ul>
 	</div>
