--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/show.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/show.html.twig
@@ -18,12 +18,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('team') }}">
+        <a href="{{ path('pm_user_team_list') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('team_edit', { 'id': entity.id }) }}">
+        <a href="{{ path('pm_user_team_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
