--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Project Manager{% endblock %}</title>
-        {% stylesheets '%kernel.root_dir%/Resources/public/css/*' output="css/compiled/bootstrap.css" filter="cssrewrite" %}
+        {% stylesheets 'bundles/projectmanagerschedule/css/*' output="css/compiled/bootstrap.css" filter="cssrewrite" %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
         {% block stylesheets %}{% endblock %}
