--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/edit.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/edit.html.twig
@@ -7,7 +7,7 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('team') }}">
+        <a href="{{ path('pm_user_team_list') }}">
             Back to the list
         </a>
     </li>
