--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Team list</h1>
 
-    <table class="records_list">
+    <table class="records_list table table-striped">
         <thead>
             <tr>
                 <th>Id</th>
@@ -14,15 +14,15 @@
         <tbody>
         {% for entity in entities %}
             <tr name="team_{{ entity.id }}">
-                <td><a href="{{ path('team_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('pm_user_team_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.name }}</td>
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('team_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('pm_user_team_show', { 'id': entity.id }) }}">show</a>
                     </li>
                     <li>
-                        <a href="{{ path('team_edit', { 'id': entity.id }) }}">edit</a>
+                        <a href="{{ path('pm_user_team_edit', { 'id': entity.id }) }}">edit</a>
                     </li>
                 </ul>
                 </td>
@@ -33,7 +33,7 @@
 
         <ul>
         <li>
-            <a href="{{ path('team_new') }}">
+            <a href="{{ path('pm_user_team_new') }}">
                 Create a new team
             </a>
         </li>
