--- a/app/Resources/views/Forms/fields.html.twig
+++ b/app/Resources/views/Forms/fields.html.twig
@@ -1,7 +1,7 @@
 {% extends 'form_div_layout.html.twig' %}
 
 
-{% block remove_button_widget -%}
+{% block glyphicon_button_widget -%}
     {% if label is empty -%}
         {%- if label_format is not empty -%}
             {% set label = label_format|replace({
@@ -16,10 +16,22 @@
     <button type="{{ type|default('button') }}" {{ block('button_attributes') }}>
         <span class="glyphicon {{ glyphicon }}" aria-hidden="true"></span>
         {{ label|trans({}, translation_domain) }}</button>
-{%- endblock remove_button_widget %}
+{%- endblock glyphicon_button_widget %}
 
 {% block _delete_object_submit_widget -%}
     {% set type = type|default('submit') %}
     {% set glyphicon = 'glyphicon-remove' %}
-    {{- block('remove_button_widget') -}}
+    {{- block('glyphicon_button_widget') -}}
 {%- endblock _delete_object_submit_widget %}
+
+{% block _edit_object_submit_widget -%}
+    {% set type = type|default('submit') %}
+    {% set glyphicon = 'glyphicon-edit' %}
+    {{- block('glyphicon_button_widget') -}}
+{%- endblock _edit_object_submit_widget %}
+
+{% block _new_object_submit_widget -%}
+    {% set type = type|default('submit') %}
+    {% set glyphicon = 'glyphicon-plus' %}
+    {{- block('glyphicon_button_widget') -}}
+{%- endblock _new_object_submit_widget %}
