--- a/app/Resources/views/Forms/fields.html.twig
+++ b/app/Resources/views/Forms/fields.html.twig
@@ -2,12 +2,10 @@
 
 
 {% block glyphicon_button_widget -%}
+    {% set label_formated = label_format|replace({'%name%': name, '%id%': id,}) %}
     {% if label is empty -%}
         {%- if label_format is not empty -%}
-            {% set label = label_format|replace({
-            '%name%': name,
-            '%id%': id,
-            }) %}
+            {% set label = label_formated %}
         {%- else -%}
             {% set label = name|humanize %}
         {%- endif -%}
