--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,9 @@
         {% stylesheets 'bundles/projectmanagerschedule/css/*' output="css/compiled/bootstrap.css" filter="cssrewrite" %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
+        {% stylesheets 'bundles/projectmanagercore/css/*' output="css/compiled/common.css" filter="cssrewrite" %}
+            <link rel="stylesheet" href="{{ asset_url }}" />
+        {% endstylesheets %}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
