--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -10,6 +10,9 @@
 			<li>
 				<a href="{{ path ('pm_user_team_list') }}">Team Management</a>
 			</li>
+            <li>
+                <a href="{{ path ('pm_project_project_list') }}">Project Management</a>
+            </li>
 		</ul>
 	</div>
 </nav>
