[Schedule] Small changes on UI

--- a/src/ProjectManager/Bundle/ScheduleBundle/Resources/public/css/calendar.css
+++ b/src/ProjectManager/Bundle/ScheduleBundle/Resources/public/css/calendar.css
@@ -1,3 +1,8 @@
 #week_calendar {
 	background-color: #DDDDFF;
+    display: table;
+}
+
+.week_calendar_header, #users_header {
+    display: table-cell;
 }
