--- a/src/ProjectManager/Bundle/CoreBundle/Resources/views/Buttons/editButton.html.twig
+++ b/src/ProjectManager/Bundle/CoreBundle/Resources/views/Buttons/editButton.html.twig
@@ -1,3 +1,4 @@
 <a class="btn btn-primary" href=" {{ object_url }}">
-    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> {{ 'buttons.edit'|trans }}
+    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+    {{ 'buttons.edit'|trans }}
 </a>
