--- a/src/ProjectManager/Bundle/ScheduleBundle/Resources/views/Schedule/index.html.twig
+++ b/src/ProjectManager/Bundle/ScheduleBundle/Resources/views/Schedule/index.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block stylesheets %}
-	{% stylesheets 'bundles/projectmanagerschedule/css/*' output="css/compiled/calendar.css" filter="cssrewrite" %}
+	{% stylesheets 'bundles/projectmanagerschedule/css/*' output="assets/css/calendar.css" filter="cssrewrite" %}
 	    <link rel="stylesheet" href="{{ asset_url }}" />
 	{% endstylesheets %}
 {% endblock %}
