--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,13 +27,22 @@
             {% include '::nav.html.twig' %}
         {% endblock %}
         {% block body %}{% endblock %}
+
+        {% javascripts
+        '@ProjectManagerCoreBundle/Resources/public/jQuery/*'
+        output='assets/jQuery/jQuery.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+
+        {% javascripts
+        '@ProjectManagerCoreBundle/Resources/public/bootstrap/js/*'
+        output='assets/bootstrap/js/bootstrap.js'
+        %}
+        <script type="text/javascript" src="{{ asset_url }}"></script>
+        {% endjavascripts %}
+
         {% block javascripts %}
-            {% javascripts
-                '@ProjectManagerCoreBundle/Resources/public/bootstrap/js/*'
-                output='assets/bootstrap/js/bootstrap.js'
-            %}
-                <script type="text/javascript" src="{{ asset_url }}"></script>
-            {% endjavascripts %}
         {% endblock %}
     </body>
 </html>
