Refactor js and add translations in user bundle

--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
@@ -1,15 +1,15 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-	<h1>User list</h1>
+	<h1>{{ 'user.list'|trans }}</h1>
 
 	<table class="records_list table table-striped">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Actions</th>
+                <th>{{ 'user.id'|trans }}</th>
+                <th>{{ 'user.firstName'|trans }}</th>
+                <th>{{ 'user.lastName'|trans }}</th>
+                <th>{{ 'user.actions'|trans }}</th>
             </tr>
         </thead>
         <tbody>
