--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/User/new.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/User/new.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    New person:
+    <h1>{{ 'user.new'|trans }}:</h1>
     {{ form(form) }}
 {% endblock body %}
