--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/notInList.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/notInList.html.twig
@@ -1,3 +1,5 @@
-
-
-{{ form(form) }}
+{% form_theme form ':Forms:fields.html.twig' %}
+{{ form_start(form) }}
+{{ form_label(form.member) }}
+{{ form_widget(form.member) }}
+{{ form_rest(form) }}
