--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
@@ -12,30 +12,23 @@
             </tr>
         </thead>
         <tbody>
-        {% for entity in entities %}
-            <tr name="team_{{ entity.id }}">
-                <td><a href="{{ path('pm_user_team_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
+        {% for team in entities %}
+            <tr name="team_{{ team.id }}">
+                <td><a href="{{ path('pm_user_team_edit', { 'id': team.id }) }}">{{ team.id }}</a></td>
+                <td>{{ team.name }}</td>
                 <td>
                 <ul>
-                    <li>
-                        <a href="{{ path('pm_user_team_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('pm_user_team_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
+                    {% set path = path('pm_user_team_edit', {'id': team.id}) %}
+                    {{ include('ProjectManagerCoreBundle:Buttons:editButton.html.twig', { 'object_url': path }) }}
+                    {% form_theme delete_forms[team.id] ':Forms:fields.html.twig' %}
+                    {{ form(delete_forms[team.id]) }}
                 </ul>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('pm_user_team_new') }}">
-                Create a new team
-            </a>
-        </li>
-    </ul>
+    {% set path = path('pm_user_team_add') %}
+    {{ include('ProjectManagerCoreBundle:Buttons:newButton.html.twig',
+    { 'object_url': path, 'object_name': 'team' }) }}
     {% endblock %}
