#6 Tasks: Add links on calendar and task edition

--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/new.html.twig
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body -%}
     {% block bodytitle %}
-        <h1>Project creation</h1>
+        <h1>{{ 'project.creation'|trans }}</h1>
     {% endblock %}
     {{ form(form) }}
 
