--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/edit.html.twig
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Project/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'ProjectManagerProjectBundle:Project:new.html.twig' %}
 
 {% block bodytitle %}
-    <h1>Project edition</h1>
+    <h1>{{ 'project.edition'|trans }} {{ project.name }}</h1>
 {% endblock %}
 
 {% block body %}
