Initialize gulp for front end

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,6 +43,7 @@
         {% endjavascripts %}
 
         {% block javascripts %}
+            <script src="{{ asset('app.js') }}"></script>
         {% endblock %}
     </body>
 </html>
