Bootstrap is no longer inside the bundles

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,22 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Project Manager{% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset('css/app.css') }}" />
         {% stylesheets
             'bundles/projectmanagercore/css/*'
             output="assets/css/common.css" filter="cssrewrite"
         %}
             <link rel="stylesheet" href="{{ asset_url }}" />
         {% endstylesheets %}
-        {% stylesheets
-            'bundles/projectmanagercore/bootstrap/css/*'
-            output="assets/bootstrap/css/bootstrap.css" filter="cssrewrite"
-        %}
-            <link rel="stylesheet" href="{{ asset_url }}" />
-        {% endstylesheets %}
-        {% stylesheets
-            'bundles/projectmanagercore/bootstrap/fonts/glyphicons-halflings-regular.ttf'
-            output='assets/bootstrap/fonts/glyphicons-halflings-regular.ttf'
-        %}{% endstylesheets %}
         {% block stylesheets %}{% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
@@ -27,20 +18,6 @@
             {% include '::nav.html.twig' %}
         {% endblock %}
         {% block body %}{% endblock %}
-
-        {% javascripts
-        '@ProjectManagerCoreBundle/Resources/public/jQuery/*'
-        output='assets/jQuery/jQuery.js'
-        %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-        {% endjavascripts %}
-
-        {% javascripts
-        '@ProjectManagerCoreBundle/Resources/public/bootstrap/js/*'
-        output='assets/bootstrap/js/bootstrap.js'
-        %}
-        <script type="text/javascript" src="{{ asset_url }}"></script>
-        {% endjavascripts %}
 
         {% block javascripts %}
             <script src="{{ asset('app.js') }}"></script>
