--- a/app/Resources/assets/stylesheets/app.less
+++ b/app/Resources/assets/stylesheets/app.less
@@ -1,2 +1,4 @@
 @import '../../../../node_modules/bootstrap/less/bootstrap';
 @import '../../../../node_modules/bootstrap/less/theme';
+@import "modules/calendar";
+@import "theme/main";
