--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/User/index.html.twig
@@ -29,11 +29,16 @@
                     {{ include('ProjectManagerCoreBundle:Buttons:editButton.html.twig', { 'object_url': path }) }}
                     {% form_theme delete_forms[user.id] ':Forms:fields.html.twig' %}
                     {{ form(delete_forms[user.id]) }}
+                    <button type="button" name="{{ user.firstName }} {{ user.lastName }}" id="delete_user_{{ user.id }}"
+                            class="btn btn-primary delete-btn" data-toggle="modal" data-target="#deleteModal">
+                        Delete
+                    </button>
                 </td>
 	    	</tr>
 		{% endfor %}
 		</tbody>
     </table>
+    <div class="modal fade" id="deleteModal"></div>
     {% set path = path('pm_user_user_add') %}
     {{ include('ProjectManagerCoreBundle:Buttons:newButton.html.twig',
         { 'object_url': path, 'object_name': 'user' }) }}
