--- a/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Task/index.html.twig
+++ b/src/ProjectManager/Bundle/ProjectBundle/Resources/views/Task/index.html.twig
@@ -30,6 +30,7 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="modal fade" id="deleteModal"></div>
     {% set path = path('pm_project_task_add', {'projectId': project.id}) %}
     {{ include('ProjectManagerCoreBundle:Buttons:newButton.html.twig',
     { 'object_url': path, 'object_name': 'task' }) }}
