--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Role/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Role/index.html.twig
@@ -30,6 +30,7 @@
 		{% endfor %}
 		</tbody>
     </table>
+    <div class="modal fade" id="deleteModal"></div>
     {% set path = path('pm_user_role_add') %}
     {{ include('ProjectManagerCoreBundle:Buttons:newButton.html.twig',
     { 'object_url': path, 'object_name': 'role' }) }}
