--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/Team/index.html.twig
@@ -28,6 +28,7 @@
         {% endfor %}
         </tbody>
     </table>
+    <div class="modal fade" id="deleteModal"></div>
     {% set path = path('pm_user_team_add') %}
     {{ include('ProjectManagerCoreBundle:Buttons:newButton.html.twig',
     { 'object_url': path, 'object_name': 'team' }) }}
