Small UI changes

--- a/app/Resources/views/nav.html.twig
+++ b/app/Resources/views/nav.html.twig
@@ -11,6 +11,9 @@
 				<a href="{{ path ('pm_user_team_list') }}">Team Management</a>
 			</li>
             <li>
+                <a href="{{ path ('pm_user_role_list') }}">Role Management</a>
+            </li>
+            <li>
                 <a href="{{ path ('pm_project_project_list') }}">Project Management</a>
             </li>
 		</ul>
