--- a/src/ProjectManager/Bundle/CoreBundle/Resources/views/Buttons/editButton.html.twig
+++ b/src/ProjectManager/Bundle/CoreBundle/Resources/views/Buttons/editButton.html.twig
@@ -1,4 +1,4 @@
-<a class="btn btn-primary" href=" {{ object_url }}">
+<a class="btn btn-primary pm_edit_btn" href=" {{ object_url }}">
     <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
     {{ 'buttons.edit'|trans }}
 </a>
