Refactor TeamMemberRepository, add all roles to the team page

--- a/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/index.html.twig
+++ b/src/ProjectManager/Bundle/UserBundle/Resources/views/TeamMember/index.html.twig
@@ -23,4 +23,10 @@
         {% endfor %}
 	</tbody>
 </table>
+
+<div id="roles" hidden>
+{% for role in roles %}
+    {{ role.id }} {{ role.name }}
+{% endfor %}
+</div>
 <div class="modal fade" id="deleteModal"></div>
